Fix Last Updated for Extensions Directory Alignment

--- a/Assets/css/plugin-manager.css
+++ b/Assets/css/plugin-manager.css
@@ -392,8 +392,8 @@ td .btn-uninstall:hover a {
 
 .plugin-dir-last-updated {
     float: left;
-    margin-bottom: 4px;
-    margin-top: 3px;
+    /*margin-bottom: 4px;*/
+    margin-top: 9px;
     padding: 2px 4px 1px 0;
     font-weight: 400;
     color: var(--pp-grey);
